--- a/0-homepage.html
+++ b/0-homepage.html
@@ -28,35 +28,38 @@
       </div>
     </header>
     <main>
-      <section class="homepage-hero text-white text-center mt-5">
-        <div class="container mt-5 d-flex flex-column align-items-center justify-content-center">
-          <div>
-            <h1>Get schooled</h1>
+      <section class="homepage-hero text-white text-center">
+        <div class="position-relative container d-flex flex-column align-items-center">
+          <div class="mt-5">
+            <h1 class="display-1 font-weight-bold">Get schooled</h1>
           </div>
           <div class="row justify-content-center">
-            <p class="m-3">SMILES</p>
-            <p class="m-3">GRIN</p>
-            <p class="m-3">LAUGH</p>
+            <p class="mx-3 font-weight-bold">SMILES</p>
+            <p class="mx-3 font-weight-bold">GRIN</p>
+            <p class="mx-3 font-weight-bold">LAUGH</p>
           </div>
-          <button class="btn text-white">REGISTER FOR FREE</button>
-          <h3 class="mt-5 mb-5">Learn from the pros</h3>
-          <div class="container card-columns text-white row">
-            <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
+          <button class="my-5 btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
+          <h3 class="my-5">
+            <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">Learn</span>
+            <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">from the pros</span>
+          </h3>
+          <div class="position-relative container card-columns text-white row my-5 justify-content-center">
+            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 mt-5 align-items-center text-align-left">
               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Phillip Massey</h3>
               <p class="card-text">« Smile of the year » 2018 - 2019</p>
             </div>
-            <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
+            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 my-5 align-items-center">
               <img src="images/profile_2.jpg" alt="nannie" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Nannie Lawrence</h3>
               <p class="card-text">Best « little smile » 2017</p>
             </div>
-            <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
+            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 my-5 align-items-center">
               <img src="images/profile_3.jpg" alt="bruce" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Bruce Walters</h3>
               <p class="card-text">Best « Friend Smile » live performance 2019</p>
             </div>
-            <div class="col-12 col-md-6 col-lg-3 card bg-transparent border-0 mt-5 align-items-center">
+            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 my-5 align-items-center">
               <img src="images/profile_4.jpg" alt="henry" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Henry Hughes</h3>
               <p class="card-text">« 24h smiles » winner 2016 - 2019</p>
