--- a/2-homepage.html
+++ b/2-homepage.html
@@ -129,22 +129,17 @@
 
       <!-- video section -->
       <section class="video container text-center">
-        <h3>Most popular tutorials</h3>
-        <div class="container">
+        <h3 class="my-5">Most popular tutorials</h3>
+        <div class="container mb-5">
           <div class="row">
-            <div class="col-md-12">
+            <div>
               <div id="videoCarousel" class="carousel slide" data-ride="carousel">
-                <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
                 <!-- inner carousel -->
                 <div class="carousel-inner">
                   <!-- first carousel item -->
                   <div class="carousel-item active">
-                    <div class="row">
-                      <div class="col-12 col-md-6 col-lg-3">
+                    <div class="row justify-content-center">
+                      <div class="col-12 col-sm-6 col-md-2">
                         <div class="single-box">
                           <div class="img-area"><img src="images/thumbnail_1.jpg" alt=""></div>
                           <div class="img-text">
@@ -153,7 +148,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-12 col-md-6 col-lg-3">
+                      <div class="col-12 col-sm-6 col-md-2">
 
                           <div class="img-area"><img src="images/thumbnail_2.jpg" alt=""></div>
                           <div class="img-text">
@@ -162,7 +157,7 @@
                           </div>
 
                       </div>
-                      <div class="col-12 col-md-6 col-lg-3">
+                      <div class="col-12 col-sm-6 col-md-2">
                         <div class="single-box">
                           <div class="img-area"><img src="images/thumbnail_3.jpg" alt=""></div>
                           <div class="img-text">
@@ -171,7 +166,7 @@
                           </div>
                         </div>
                       </div>
-                      <div class="col-12 col-md-6 col-lg-3">
+                      <div class="col-12 col-sm-6 col-md-2">
                         <div class="single-box">
                           <div class="img-area"><img src="images/thumbnail_4.jpg" alt=""></div>
                           <div class="img-text">
