--- a/3-homepage.html
+++ b/3-homepage.html
@@ -256,19 +256,46 @@
       </section>
       <!--....... membership section........................ -->
       <section class="membership text-white">
-        <div class="container align-items-center text-center">
-          <h3><span>Free </span>membership</h3>
-            <div class="row">
-              <div class="col-md-3 justify-content-center">
-                <img src="images/smile_on.png" alt="purple_smile" class="smile_on-area">
-                <div class="img-text">
-                  <h3>Lorem ipsum</h2>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
+        <div class="container align-items-center text-center mt-5">
+          <h3 class="p-5">
+            <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">Free</span>
+            <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">membership</span>
+          </h3>
+          <div class="row">
+            <div class="col-md-3 justify-content-center">
+              <img src="images/smile_on.png" alt="purple_smile" class="smile_on-area">
+              <div class="img-text">
+                <h3>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
             </div>
-            <button class="my-5 btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
+
+            <div class="col-md-3 justify-content-center">
+              <img src="images/smile_on.png" alt="purple_smile" class="smile_on-area">
+              <div class="img-text">
+                <h3>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+
+            <div class="col-md-3 justify-content-center">
+              <img src="images/smile_on.png" alt="purple_smile" class="smile_on-area">
+              <div class="img-text">
+                <h3>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+
+            <div class="col-md-3 justify-content-center">
+              <img src="images/smile_on.png" alt="purple_smile" class="smile_on-area">
+              <div class="img-text">
+                <h3>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
           </div>
+          <button class="my-5 btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
+        </div>
       </section>
     </main>
     <footer>
