--- a/2-courses.html
+++ b/2-courses.html
@@ -76,9 +76,30 @@
         </div>
       </section>
 <!--.............. results section................................. -->
-      <section>
+      <section class="results video">
         <div class="row">
-
+          <div class="card">
+            <div class="img-area">
+              <img src="images/thumbnail_1.jpg" alt=""></div>
+            <div class="img-text">
+              <h3 class="">Natural Smile</h3>
+              <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+              <div class="row align-items-center justify-content-around">
+                <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                <h3 class="card-title text-purple">Phillip Massey</h3>
+              </div>
+              <div class="row justify-content-around">
+                <div>
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_on.png" alt="star_on" class="small-star">
+                  <img src="images/star_off.png" alt="star_off" class="small-star">
+                </div>
+                <p class="text-purple">8 min</p>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
